--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>Configurator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.atlaspuplabs.configurator</groupId>
+    <artifactId>configurator</artifactId>
+    <version>1.0.1.22.11.13</version>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub mfoulks3200 Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/mfoulks3200/Configurator</url>
+        </repository>
+    </distributionManagement>
 
     <repositories>
         <repository>
